# GNG-SAM

./: CMakeLists.txt  README.md  puntos.txt
src/: main.cpp
src/include/: data_ranges.hpp  gng_sam.hpp  point.hpp  random.hpp  tools.hpp
test/: data_ranges.cpp  point.cpp
